# rasptherm

./: .code-workspace  .eslintignore  .gitignore  .prettierignore  README.md  eslint.config.mjs  lint-staged.config.mjs  nx.json  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
apps/backend/: README.md  project.json  pyproject.toml
apps/backend/backend/services/: metadata.py  sensor.py
apps/backend/backend/utils/: dependency.py
apps/backend/tests/: test_main.py
apps/backend/tests/routers/: test_sensor.py
apps/backend/tests/utils/: test_repeat.py
apps/rasptherm/: index.html  openapi.config.ts  package.json  project.json  tsconfig.app.json  tsconfig.spec.json  vite.config.ts
apps/rasptherm-backend/: project.json  pyproject.toml
apps/rasptherm-backend/rasptherm_backend/: main.py
apps/rasptherm-backend/rasptherm_backend/models/: error.py  sensor.py
apps/rasptherm-backend/rasptherm_backend/routers/: sensor.py
apps/rasptherm-backend/rasptherm_backend/services/: certs.py  metadata.py  sensor.py  settings.py
apps/rasptherm-backend/rasptherm_backend/types/: sensor.py
apps/rasptherm-backend/src/rasptherm_backend/: main.py
apps/rasptherm-backend/src/rasptherm_backend/models/: sensor.py
apps/rasptherm-backend/src/rasptherm_backend/routers/: sensor.py
apps/rasptherm-backend/src/rasptherm_backend/services/: certs.py  cors.py  metadata.py
apps/rasptherm-backend/src/rasptherm_backend/utils/: sensor.py
apps/rasptherm-backend/tests/: conftest.py  test_main.py
apps/rasptherm-backend/tests/routers/: test_sensor.py
apps/rasptherm-backend/tests/services/: test_cors.py
apps/rasptherm-backend/tests/utils/: test_repeat.py
apps/rasptherm-e2e/: package.json  playwright.config.ts  project.json
apps/rasptherm-e2e/src/: app.spec.ts
apps/rasptherm-e2e/src/e2e/: app.cy.ts
apps/rasptherm-e2e/src/support/: app.po.ts  commands.ts
apps/rasptherm-sensor/: README.md  project.json  pyproject.toml
apps/rasptherm-sensor/rasptherm_sensor/: client.py  sensor.py  setup.py  types.py  utils.py
apps/rasptherm-sensor/rasptherm_sensor/cli/: main.py  protoc.py  serve.py  types.py
apps/rasptherm-sensor/rasptherm_sensor/interface/: sensor.proto  sensor_pb2.py  sensor_pb2.pyi  sensor_pb2_grpc.py
apps/rasptherm-sensor/rasptherm_sensor/variants/: ath20.py  fake.py
apps/rasptherm-sensor/src/rasptherm_sensor/: client.py  sensor.py  types.py
apps/rasptherm-sensor/src/rasptherm_sensor/cli/: serve.py  types.py
apps/rasptherm-sensor/src/rasptherm_sensor/interface/: sensor_pb2.py
apps/rasptherm-sensor/tests/: conftest.py  test_sensor.py
apps/rasptherm/src/: main.tsx
apps/rasptherm/src/app/: app.spec.tsx  app.tsx
apps/rasptherm/src/client/: RaspthermClient.ts  index.ts
apps/rasptherm/src/client/models/: MetadataModel.ts  ReadSensorModel.ts
apps/rasptherm/src/client/services/: DefaultService.ts  SensorService.ts
apps/rasptherm/src/components/error-message/: error-message.test.tsx  error-message.tsx
apps/rasptherm/src/components/sensor/: sensor.spec.tsx  sensor.tsx
apps/rasptherm/src/components/sensor-grid/: sensor-grid.tsx
apps/rasptherm/src/components/sensor/internal/: humidity.tsx  sensor-readout-executed-at.tsx  sensor-readout-humidity.tsx  sensor-readout-temperature.tsx  sensor-readout-without-loading.tsx  sensor-readout.tsx  slash.tsx  temperature.tsx  with-loading.tsx
apps/rasptherm/src/components/theme-mode/: theme-mode-form-control.tsx  theme-mode-menu-icon.tsx  theme-mode-popover.tsx  theme-mode.spec.tsx  theme-mode.tsx
apps/rasptherm/src/components/topbar/: topbar.test.tsx  topbar.tsx
apps/rasptherm/src/components/with-theme/: with-theme.tsx
apps/rasptherm/src/hooks/: error.ts  popover.ts  sensor.ts  theme.ts
apps/rasptherm/src/store/: base.api.ts  error.slice.ts  sensor.api.ts  sensor.slice.ts  store.ts  theme.slice.ts
apps/rasptherm/src/test-utils/: render.tsx  setup.ts
apps/rasptherm/src/types/: error.ts  sensor.ts
apps/rasptherm/src/utils/: error.ts
