[project]
name = "rasptherm-backend"
version = "0.2.0"
description = "Temperature and humidity sensor control backend"
requires-python = ">=3.11,<4"
authors = []
license = "GPL-3.0-only"
readme = "README.md"
dependencies = [
    "fastapi[standard]>=0.116.1,<0.117",
    "pydantic-settings>=2.10.1,<3",
    "rasptherm-sensor",
]

[dependency-groups]
dev = [
  "mypy>=1.9.0,<2",
  "pytest>=8.1.1,<9",
  "pytest-asyncio>=1.1.0,<2",
  "ruff>=0.12.12,<0.13",
]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[tool.mypy]
cache_dir = ".cache/mypy"
plugins = ["pydantic.mypy"]
python_version = "3.11"
strict = true

[tool.ruff]
cache-dir = ".cache/ruff"

[tool.ruff.lint]
select = [ "E4", "E7", "E9", "F", "I" ]

[tool.pytest.ini_options]
asyncio_mode = "auto"
cache_dir = ".cache/pytest"

[tool.uv]
cache-dir = ".cache/uv"

[tool.uv.sources]
rasptherm-sensor = { path = "../rasptherm-sensor", editable = true }
